FC-109 - minor cleanup includes reformatting javadoc